GitHubRepoActivityIntensity implemented and tested